--- a/webApp/templates/Hashtags.html
+++ b/webApp/templates/Hashtags.html
@@ -6,6 +6,7 @@
             <div class="card card-style mb-2">
                 <div class="card-body">
                     <div class="chart-container" style="position: relative;">
+                        <h4>Top 20 Hashtags</h4>
                         <div id="hashtags"></div>
                     </div>
                 </div>
