--- a/webApp/templates/Languages.html
+++ b/webApp/templates/Languages.html
@@ -139,6 +139,7 @@ chart.appear(1000, 100);
 </script>
 
 <!-- HTML -->
+    <h4>Tweets' Top Languages</h4>
     <div id="chartdiv"></div>
 {% endblock %}
 
